# MarkusPfundstein_cmd-line-executor-MCP

./: README.md  pyproject.toml
src/cmd_line_executor/: server.py
